# Deckbuilder

./: .gitignore  .pre-commit-config.yaml  API.md  BACKEND.md  CLAUDE.md  DISCOVERY.md  Deckbuilder.code-workspace  LICENSE  MANIFEST.in  PLANNING.md  README.md  TASK.md  TestPrompt.md  bandit.yaml  debug_conventions.py  deckbuilder  deckbuilder-completion.bash  list-content-spec.md  master_examples.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  table-styles.css  templates  verify_presentation.py
.github/ISSUE_TEMPLATE/: Speaker_Notes_issue.md
.github/workflows/: build-validation.yml  publish-dev.yml  publish-release.yml  test.yml
.specs/: .spec-metadata.json
.specs/name-based-placeholder-refactor/: design.md  requirements.md  tasks.md  tasks_detail.md
.specs/slide-builder-refactor/: design.md  requirements.md  tasks.md
assets/examples/: simple_presentation.json  simple_presentation_escaped.txt
assets/templates/: default.g.pptx  default.json  default.json.old  default.pptx  default.pptx.old
docs/: API.md  BACKEND.md  CLI_Framework_Decision.md  CODE_REVIEW_DESIGN.md  REFACTOR_PLAN.md  TASK_4.1_TABLE_MARKDOWN_ANALYSIS.md  cli copy.md  cli.md  deckbuilder.md  formatting_test.md  index.md  mcp_server.md  placekitten.md  supported_templates.md  table-styles.css  table-styles.html
docs/Features/: CLI_Reorganization.md  ConventionBasedNaming.md  Convention_Based_Naming.md  Deckbuilder_CLI.md  Deckbuilder_Content_Intelligence.md  Deckbuilder_Core_API.md  Deckbuilder_Python_Library.md  Deckbuilder_Quick_Start.md  Deckbuilder_Template_Management.md  DefaultTemplate.md  Enhanced_Table_Colors.md  In_Memory_Language_Font_Formatting.md  JSON_is_now_the_king.md  Multi_Content_Layouts.md  PlaceKitten.md  Place_Kitten.md  PlaceholderMatching.md  Placeholder_Matching.md  Speaker_Notes.md  Structured_Frontmatter_Test_Files.md  SupportedTemplates.md  Supported_Templates.md  TemplateDiscovery-Addendum.md  TemplateDiscovery.md  TemplateManagement.md  Template_Discovery.md  Template_Management.md  Testing_Framework.md
docs/examples/: basic_presentation.md  json_example.json
docs/explanations/: architecture.md
docs/howtos/: batch.md  fonts-language.md  mcp.md  status-tables.md  table-styling.md  transparent-tables.md
docs/migration/: v1.4.0-migration-guide.md
docs/old_docs/: API.md  CODE_REVIEW.md  FOLDER_STRUCTURE.md  FOLDER_STRUCTURE_DESIGN.md  LayoutDiscovery.md  TemplateManagement.md  list-content-spec.md  mcp_server.md  supported_templates.md  table-styles.html
docs/old_docs/Features/: Deckbuilder_Quick_Start.md  Deckbuilder_Template_Management.md  DefaultTemplate.md  Image_Support.md  JSON_is_now_the_king.md  Place_Kitten.md  Template_Management.md  Testing_Framework.md
docs/reference/: deckbuilder.md  placekitten.md  table-styles.md
docs/tutorials/: branded-template.md  first-deck.md
examples/: advanced_features.md  simple_presentation.json  simple_presentation_escaped.txt
generated-docs/: API.md  BACKEND.md  README.md  repomix_output.xml
issues/: 1
scripts/: breakglass_check.sh  build_examples.sh  check_no_os_environ.py  check_root_pollution.py  commit_msg_block_no_verify.sh  copy_golden_files.py  generate_master_examples.py  install-docs.sh  launch_mcp_inspector.sh  pre_commit_block_no_verify.sh
src/: content_analysis.py  content_optimization.py  deckbuilder.py  default.json  default.pptx  main.py  placeholder_types.py  slide_layouts.py  tools.py
src/deckbuilder/: __init__.py  cli.py  cli_tools.py  content_formatter.py  content_formatting.py  content_matcher.py  content_processor.py  converter.py  deckbuilder-completion.bash  engine.py  formatting_support.py  image_handler.py  image_placeholder_handler.py  layout_analyzer.py  layout_intelligence.json  layout_intelligence.py  logging_config.py  naming_conventions.py  path_manager.py  pattern_loader.py  placeholder_types.py  placekitten_integration.py  presentation_builder.py  recommendation_engine.py  slide_builder.py  structured_frontmatter.py  table_builder.py  table_styles.py  template_manager.py  template_metadata.py  validation.py
src/deckbuilder/assets/: html_colors_reference.html  master_default_presentation.json  (+1 more)
src/mcp_server/: README_CONTENT_FIRST_TOOLS.md  __init__.py  content_analysis.py  content_first_tools.py  content_optimization.py  layout_recommendations.py  main.py  tools.py
src/placekitten/: README.md  __init__.py  core.py  filters.py  processor.py  smart_crop.py
src/shared/: __init__.py
template_output/: default.g.g.json  default.g.json
templates/: Getting_Started.md
templates/examples/: test_presentation.json  test_presentation.md  test_presentation_broken.json.backup
tests/: FormattingTest.md  README.md  TEST_CLEANUP_SUMMARY.md  TestPrompt.md  __init__.py  conftest.py  test_basic.py  test_comprehensive_layouts.json  test_comprehensive_layouts.md  test_mcp_template_discovery.py  test_pattern_loader.py  test_presentation.json  test_presentation.md  test_semantic_aliases.py  test_structured_frontmatter_examples.py  test_template_metadata.py  test_template_recommendation.py  test_text_replacement.py  test_tools.py
tests/core/: __init__.py  fixtures.py  test_content_processor.py  test_cross_module_integration.py  test_integration.py  test_slide_coordinator.py  test_table_handler.py  test_table_handler_comprehensive.py  test_template_layout_integration.py  test_template_layouts.py
tests/debug_cli/: test_debug.2025-07-06_1655.g.pptx
tests/deckbuilder/: conftest.py  test_comprehensive_layouts.json  test_comprehensive_layouts.md  test_image_integration.py  test_image_presentation.py  test_presentation.json  test_presentation.md  test_speaker_notes_comprehensive.json  test_structured_frontmatter.md
tests/integration/: test_image_support.py
tests/mcp_server/: test_tools_path_integration.py
tests/placekitten/: debug_scaling.py  placekitten_demo.ipynb  test_placekitten.py  test_placekitten_pytest.py  test_smart_crop.py
tests/utils/: content_generator.py  pptx_validator.py  template_test_generator.py  test_runner.py
(+194 files in other folders)
